# langchain-ai-assistant-hands-on

./: .gitignore  colab.ipynb  pyproject.toml
log/inputs/: 20231117_2359_23.md  20231118_0009_22.md  20231118_1221_41.md  20231118_1222_02.md  20231118_1222_32.md  20231118_1343_24.md  20231118_1345_07.md  20231118_1349_35.md  20231118_1354_28.md  20231118_1358_13.md  20231118_1401_24.md  20231118_1403_24.md  20231118_1408_17.md  20231118_1429_39.md  20231118_1515_02.md  20231118_1517_09.md  20231118_1519_01.md  20231118_1536_49.md  20231118_1541_12.md  20231121_1119_45.md  20231121_1122_16.md  20231121_1122_54.md  20231121_1134_12.md  20231121_1138_36.md  20231123_1358_41.md  20231123_1359_25.md  20231123_1400_58.md  20231123_1412_41.md  20231123_1450_01.md  20231123_1450_46.md  20231123_1453_05.md  20231123_1506_21.md  20231123_1521_47.md  20231123_1529_22.md  20231123_1530_04.md  20231123_2228_07.md  20231123_2252_45.md  20231123_2308_11.md  20231123_2309_29.md  20231123_2313_25.md  (+59 more)
log/outputs/: 20231117_2359_23.md  20231118_0005_48.md  20231118_0009_22.md  20231118_1221_27.md  20231118_1221_41.md  20231118_1222_02.md  20231118_1222_32.md  20231118_1222_38.md  20231118_1343_24.md  20231118_1345_07.md  20231118_1349_35.md  20231118_1354_28.md  20231118_1358_13.md  20231118_1401_24.md  20231118_1403_24.md  20231118_1408_17.md  20231118_1429_39.md  20231118_1515_02.md  20231118_1517_09.md  20231118_1519_01.md  20231118_1523_12.md  (+83 more)
prompt_templates/: en-proofreader-research.md  researcher-prompt.md
webapp/: agent_app.py  researcher-prompt copy.md  researcher-prompt.md
(+106 files in other folders)
